# xsokoban

./: .gitignore  DIRS  FILES  Imakefile  Makefile  Makefile.in  README  README.html  announce-list  config.h  config.h.server  config_local.h  config_local.h.in  configure  configure.in  defaults.h  display.c  display.h  errors.h  externs.h  globals.h  help.h  main.c  make_shar  options.h  patchlevel.h  play.c  qtelnet.c  resources.c  save.c  score.c  score.h  scoredisp.c  screen.c  shipping_checklist  shrink.perl  todo  www.h  xsokoban.man
bitmaps/20/: centerwall.xpm  east_twall.xpm  eastwall.xpm  floor.xpm  goal.xpm  horizwall.xpm  llcornerwall.xpm  lrcornerwall.xpm  man.xpm  north_twall.xpm  northwall.xpm  object.xpm  saveman.xpm  south_twall.xpm  southwall.xpm  treasure.xpm  ulcornerwall.xpm  urcornerwall.xpm  vertiwall.xpm  wall.xpm  west_twall.xpm  westwall.xpm
bitmaps/36/: all.xpm  centerwall.xpm  east_twall.xpm  eastwall.xpm  floor.xpm  goal.xpm  horizwall.xpm  llcornerwall.xpm  lonewall.xpm  lrcornerwall.xpm  man.xpm  north_twall.xpm  northwall.xpm  object.xpm  saveman.xpm  south_twall.xpm  southwall.xpm  treasure.xpm  ulcornerwall.xpm  urcornerwall.xpm  vertiwall.xpm  west_twall.xpm  westwall.xpm
bitmaps/bw/: floor.xbm  man.xbm  object.xbm  saveman.xbm  treasure.xbm
bitmaps/defaults/: afterpixels.awk  centerwall.xpm  crunch  east_twall.xpm  eastwall.xpm  floor.xpm  goal.xbm  goal.xpm  hist  horizwall.xpm  llcornerwall.xpm  lonewall.xpm  lrcornerwall.xpm  man.xpm  north_twall.xpm  northwall.xpm  object.xpm  saveman.xpm  saveman1  south_twall.xpm  southwall.xpm  split  split.c  treasure.xpm  ulcornerwall.xpm  urcornerwall.xpm  vertiwall.xpm  wall.xbm  west_twall.xpm  westwall.xpm
screens/: screen.91
server/: sok-best-by-level  sok-best-scores  sok-scores  sok-screen  sok-screens  sok-solve
